--- a/project/package.json
+++ b/project/package.json
@@ -10,8 +10,19 @@
     "lint": "eslint ."
   },
   "dependencies": {
+    "@builderx/utils": "^0.1.6",
+    "@react-native-community/masked-view": "^0.1.8",
+    "@react-navigation/native": "latest",
+    "@react-navigation/stack": "^5.2.10",
     "react": "16.11.0",
-    "react-native": "0.62.1"
+    "react-native": "0.62.1",
+    "react-native-gesture-handler": "^1.6.1",
+    "react-native-maps": "^0.27.1",
+    "react-native-reanimated": "^1.8.0",
+    "react-native-safe-area-context": "^0.7.3",
+    "react-native-screens": "^2.4.0",
+    "react-native-svg": "^12.1.0",
+    "react-navigation": "^4.3.7"
   },
   "devDependencies": {
     "@babel/core": "7.9.0",
@@ -25,5 +36,10 @@
   },
   "jest": {
     "preset": "react-native"
+  },
+  "rnpm": {
+    "assets": [
+      "./assets/fonts/"
+    ]
   }
 }
