--- a/project/android/build.gradle
+++ b/project/android/build.gradle
@@ -6,13 +6,15 @@ buildscript {
         minSdkVersion = 16
         compileSdkVersion = 28
         targetSdkVersion = 28
+        googlePlayServicesVersion = "11.8.0"
+        androidMapsUtilsVersion = "0.5+"
     }
     repositories {
         google()
         jcenter()
     }
     dependencies {
-        classpath("com.android.tools.build:gradle:3.5.2")
+        classpath('com.android.tools.build:gradle:3.6.2')
 
         // NOTE: Do not place your application dependencies here; they belong
         // in the individual module build.gradle files
