--- a/project/package.json
+++ b/project/package.json
@@ -11,9 +11,7 @@
   },
   "dependencies": {
     "@builderx/utils": "^0.1.6",
-    "@react-native-community/masked-view": "^0.1.8",
-    "@react-navigation/native": "latest",
-    "@react-navigation/stack": "^5.2.10",
+    "@react-native-community/masked-view": "^0.1.9",
     "react": "16.11.0",
     "react-native": "0.62.1",
     "react-native-gesture-handler": "^1.6.1",
@@ -32,6 +30,8 @@
     "eslint": "6.8.0",
     "jest": "24.9.0",
     "metro-react-native-babel-preset": "0.58.0",
+    "react-native-vector-icons": "^6.6.0",
+    "react-navigation-stack": "^2.3.11",
     "react-test-renderer": "16.11.0"
   },
   "jest": {
