--- a/project/package.json
+++ b/project/package.json
@@ -14,6 +14,7 @@
     "@react-native-community/masked-view": "^0.1.9",
     "react": "16.11.0",
     "react-native": "0.62.1",
+    "react-native-elements": "^1.2.7",
     "react-native-gesture-handler": "^1.6.1",
     "react-native-maps": "^0.27.1",
     "react-native-reanimated": "^1.8.0",
@@ -32,6 +33,7 @@
     "metro-react-native-babel-preset": "0.58.0",
     "react-native-vector-icons": "^6.6.0",
     "react-navigation-stack": "^2.3.11",
+    "react-navigation-tabs": "^2.8.11",
     "react-test-renderer": "16.11.0"
   },
   "jest": {
