--- a/project/package.json
+++ b/project/package.json
@@ -15,6 +15,7 @@
     "react": "16.11.0",
     "react-native": "0.62.1",
     "react-native-elements": "^1.2.7",
+    "react-native-firebase": "^5.6.0",
     "react-native-gesture-handler": "^1.6.1",
     "react-native-maps": "^0.27.1",
     "react-native-reanimated": "^1.8.0",
