--- a/project/package.json
+++ b/project/package.json
@@ -11,8 +11,13 @@
   },
   "dependencies": {
     "@builderx/utils": "^0.1.6",
+    "@google-cloud/firestore": "^3.8.0",
     "@react-native-community/masked-view": "^0.1.9",
+    "@react-native-firebase/app": "^7.0.1",
+    "algoliasearch": "^4.2.0",
     "firebase": "^7.14.1",
+    "firebase-admin": "^8.12.1",
+    "prop-types": "latest",
     "react": "16.11.0",
     "react-native": "0.62.1",
     "react-native-elements": "^1.2.7",
@@ -26,14 +31,17 @@
     "react-navigation-drawer": "^2.4.11"
   },
   "devDependencies": {
+    "@google-cloud/firestore": "^3.8.0",
     "@babel/core": "7.9.0",
     "@babel/runtime": "7.9.2",
     "@react-native-community/async-storage": "^1.10.0",
     "@react-native-community/eslint-config": "0.0.5",
     "babel-jest": "24.9.0",
     "eslint": "6.8.0",
+    "firebase-functions": "^3.6.1",
     "jest": "24.9.0",
     "metro-react-native-babel-preset": "0.58.0",
+    "react-instantsearch": "^6.4.0",
     "react-native-vector-icons": "^6.6.0",
     "react-navigation-stack": "^2.3.11",
     "react-navigation-tabs": "^2.8.11",
