card redirect works

--- a/project/android/app/src/main/AndroidManifest.xml
+++ b/project/android/app/src/main/AndroidManifest.xml
@@ -4,6 +4,7 @@
     <uses-permission android:name="android.permission.INTERNET" />
     <uses-permission android:name="android.permission.ACCESS_COARSE_LOCATION"/>
     <uses-permission android:name="android.permission.ACCESS_WIFI_STATE"/>
+    <uses-permission android:name="android.permission.ACCESS_FINE_LOCATION" />
 
     <permission      android:name="com.shop.shoppinglist.permission.MAPS_RECEIVE"
                      android:protectionLevel="signature"/>
@@ -31,12 +32,14 @@
       </activity>
       <activity android:name="com.facebook.react.devsupport.DevSettingsActivity" />
 
+
+        <uses-library android:name="org.apache.http.legacy" android:required="false"/>
         <meta-data
                 android:name="com.google.android.geo.API_KEY"
-                android:value="AIzaSyAM1K099tIzsnsoFPqMEd80QI9BvK-uBTA"/>
-
-        <!-- You will also only need to add this uses-library tag -->
-        <uses-library android:name="org.apache.http.legacy" android:required="false"/>
+                android:value="AIzaSyBWeYmaWDQotGB_BjI_x69LbE0NDIRJ4ck"/>
+        <meta-data
+                android:name="com.google.android.gms.version"
+                android:value="@integer/google_play_services_version" />
     </application>
 
 </manifest>
