--- a/project/package.json
+++ b/project/package.json
@@ -12,15 +12,21 @@
   "dependencies": {
     "@builderx/utils": "^0.1.6",
     "@google-cloud/firestore": "^3.8.0",
+    "@react-native-community/geolocation": "^2.0.2",
     "@react-native-community/masked-view": "^0.1.9",
     "@react-native-firebase/app": "^7.0.1",
+    "@react-navigation/stack": "^5.3.6",
     "algoliasearch": "^4.2.0",
+    "cors": "latest",
+    "express": "latest",
     "firebase": "^7.14.1",
     "firebase-admin": "^8.12.1",
+    "google-maps-react": "^2.0.6",
     "prop-types": "latest",
     "react": "16.11.0",
     "react-native": "0.62.1",
     "react-native-elements": "^1.2.7",
+    "react-native-geocoding": "^0.4.0",
     "react-native-gesture-handler": "^1.6.1",
     "react-native-maps": "0.27.1",
     "react-native-reanimated": "^1.8.0",
@@ -30,22 +36,22 @@
     "react-native-webview": "^9.4.0",
     "react-navigation": "^4.3.7",
     "react-navigation-drawer": "^2.4.11",
-    "search-insights": "^1.4.0",
-    "express": "latest",
-    "cors": "latest"
+    "search-insights": "^1.4.0"
   },
   "devDependencies": {
-    "@google-cloud/firestore": "^3.8.0",
     "@babel/core": "7.9.0",
     "@babel/runtime": "7.9.2",
+    "@google-cloud/firestore": "^3.8.0",
     "@react-native-community/async-storage": "^1.10.0",
     "@react-native-community/eslint-config": "0.0.5",
+    "@react-navigation/native": "^5.3.2",
     "babel-jest": "24.9.0",
     "eslint": "6.8.0",
     "firebase-functions": "^3.6.1",
     "jest": "24.9.0",
     "metro-react-native-babel-preset": "0.58.0",
     "react-instantsearch": "^6.4.0",
+    "react-native-drawer": "^2.5.1",
     "react-native-vector-icons": "^6.6.0",
     "react-navigation-stack": "^2.3.11",
     "react-navigation-tabs": "^2.8.11",
