--- a/project/android/app/build.gradle
+++ b/project/android/app/build.gradle
@@ -203,7 +203,7 @@ android {
 
 dependencies {
     implementation 'com.android.support:multidex:1.0.3'
-    implementation project(':react-native-maps')
+    implementation project(":react-native-maps")
     implementation fileTree(dir: "libs", include: ["*.jar"])
     //noinspection GradleDynamicVersion
     implementation "com.facebook.react:react-native:+"  // From node_modules
