--- a/project/android/build.gradle
+++ b/project/android/build.gradle
@@ -12,6 +12,8 @@ buildscript {
     repositories {
         google()
         jcenter()
+        maven { url "https://maven.google.com" }
+        maven { url "https://jitpack.io" }
     }
     dependencies {
         classpath('com.android.tools.build:gradle:3.6.2')
@@ -32,6 +34,8 @@ allprojects {
             // Android JSC is installed from npm
             url("$rootDir/../node_modules/jsc-android/dist")
         }
+        jcenter()
+        maven { url "https://maven.google.com" }
 
         google()
         jcenter()
