--- a/project/package.json
+++ b/project/package.json
@@ -33,6 +33,7 @@
     "react-native-safe-area-context": "^0.7.3",
     "react-native-screens": "^2.4.0",
     "react-native-svg": "^12.1.0",
+    "react-native-toasty": "^1.0.1",
     "react-native-webview": "^9.4.0",
     "react-navigation": "^4.3.7",
     "react-navigation-drawer": "^2.4.11",
@@ -52,6 +53,7 @@
     "metro-react-native-babel-preset": "0.58.0",
     "react-instantsearch": "^6.4.0",
     "react-native-drawer": "^2.5.1",
+    "react-native-toast-message": "^1.3.0",
     "react-native-vector-icons": "^6.6.0",
     "react-navigation-stack": "^2.3.11",
     "react-navigation-tabs": "^2.8.11",
