--- a/project/package.json
+++ b/project/package.json
@@ -24,14 +24,17 @@
     "google-maps-react": "^2.0.6",
     "prop-types": "latest",
     "react": "16.11.0",
+    "react-dom": "^16.13.1",
     "react-native": "0.62.1",
     "react-native-elements": "^1.2.7",
     "react-native-geocoding": "^0.4.0",
     "react-native-gesture-handler": "^1.6.1",
     "react-native-maps": "0.27.1",
+    "react-native-paper": "^3.10.1",
     "react-native-reanimated": "^1.8.0",
     "react-native-safe-area-context": "^0.7.3",
     "react-native-screens": "^2.4.0",
+    "react-native-share": "^3.3.2",
     "react-native-svg": "^12.1.0",
     "react-native-toasty": "^1.0.1",
     "react-native-webview": "^9.4.0",
@@ -42,6 +45,7 @@
   "devDependencies": {
     "@babel/core": "7.9.0",
     "@babel/runtime": "7.9.2",
+    "@bam.tech/react-native-make": "^3.0.0",
     "@google-cloud/firestore": "^3.8.0",
     "@react-native-community/async-storage": "^1.10.0",
     "@react-native-community/eslint-config": "0.0.5",
